@@ -1,5 +1,10 @@
 2001-11-15  Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c: select the next process if the selected process
+	was removed
+
+2001-11-15  Kevin Vandersloot <kfv101@psu.edu>
+
 	* callbacks.c: get disk updating correct. Save the iters
 	that need to be removed
 
